IGU-460 some fixed to b977a63
The wrong positioned dropdown only appeared on pages with a horizontal
scrollbar. So the static fix before didn't work on all browsers. To fix
this a margin-left with the size of the scrollbar is added to the
dropdown.

--- a/src/common/static/css/autocomplete-light.css
+++ b/src/common/static/css/autocomplete-light.css
@@ -3,10 +3,12 @@
 	width: 100% !important;
 }
 
-.select2-dropdown.select2-dropdown--below {
-	left: 15px;
+.select2-container--open:not(.select2) {
+	/* fix for scrollbar jumping fix in style.scss */
+	margin-left: calc(100vw - 100%);
 }
 
 .select2-container--default .select2-selection--multiple {
 	padding-top: unset;
+	height: auto;
 }
